--- a/main.ipynb
+++ b/main.ipynb
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "3sfgzqt3SY_z"
       },
@@ -101,8 +101,6 @@
         "\n",
         "nlp = spacy.load('en_core_web_sm')\n",
         "stop_words = nlp.Defaults.stop_words\n",
-        "# Load stop words from spacy.STOP_WORDS\n",
-        "stop_words = spacy.lang.en.STOP_WORDS\n",
         "\n",
         "# Cache processed strings and text sentiments\n",
         "processed_strings = {}\n",
@@ -169,10 +167,9 @@
       "outputs": [],
       "source": [
         "text_columns = [\"text\", \"comment\"]\n",
-        "test_df = df\n",
-        "test_df[text_columns] = test_df[text_columns].applymap(preprocess_text)\n",
-        "test_df[\"post_sentiments\"] = test_df[\"text\"].apply(get_text_sentiments)\n",
-        "test_df[\"comment_sentiments\"] = test_df[\"comment\"].apply(get_text_sentiments)"
+        "df[text_columns] = df[text_columns].applymap(preprocess_text)\n",
+        "df[\"post_sentiments\"] = df[\"text\"].apply(get_text_sentiments)\n",
+        "df[\"comment_sentiments\"] = df[\"comment\"].apply(get_text_sentiments)"
       ]
     },
     {
@@ -190,7 +187,7 @@
       },
       "outputs": [],
       "source": [
-        "test_df.sample(1)"
+        "df.sample(1)"
       ]
     },
     {
